@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.020.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.027.
 use strict;
 use warnings;
 
@@ -18,6 +18,7 @@ my %WriteMakefileArgs = (
   "DISTNAME" => "Dist-Zilla-PluginBundle-DAGOLDEN",
   "EXE_FILES" => [],
   "LICENSE" => "apache",
+  "MIN_PERL_VERSION" => "5.008001",
   "NAME" => "Dist::Zilla::PluginBundle::DAGOLDEN",
   "PREREQ_PM" => {
     "Dist::Zilla" => "5.014",
@@ -37,10 +38,10 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::MetaNoIndex" => 0,
     "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14",
     "Dist::Zilla::Plugin::MinimumPerl" => 0,
+    "Dist::Zilla::Plugin::Pod2Readme" => 0,
     "Dist::Zilla::Plugin::PodWeaver" => 0,
     "Dist::Zilla::Plugin::Prereqs::AuthorDeps" => 0,
     "Dist::Zilla::Plugin::PromptIfStale" => "0.011",
-    "Dist::Zilla::Plugin::ReadmeFromPod" => "0.19",
     "Dist::Zilla::Plugin::RewriteVersion" => 0,
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
     "Dist::Zilla::Plugin::TaskWeaver" => "0.101620",
@@ -103,10 +104,10 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::MetaNoIndex" => 0,
   "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14",
   "Dist::Zilla::Plugin::MinimumPerl" => 0,
+  "Dist::Zilla::Plugin::Pod2Readme" => 0,
   "Dist::Zilla::Plugin::PodWeaver" => 0,
   "Dist::Zilla::Plugin::Prereqs::AuthorDeps" => 0,
   "Dist::Zilla::Plugin::PromptIfStale" => "0.011",
-  "Dist::Zilla::Plugin::ReadmeFromPod" => "0.19",
   "Dist::Zilla::Plugin::RewriteVersion" => 0,
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
   "Dist::Zilla::Plugin::TaskWeaver" => "0.101620",
@@ -122,7 +123,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
-  "ExtUtils::MakeMaker" => 0,
+  "ExtUtils::MakeMaker" => "6.17",
   "File::Spec" => 0,
   "File::pushd" => 0,
   "Moose" => "0.99",
